--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -36,7 +36,7 @@
                 <path fill-rule="evenodd"
                   d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
               </svg>
-              <p sec:authentication="name"></p>
+              <p th:text="${username}"></p>
             </a>
             <ul class="list-group hide">
               <li class="list-group-item "><a href="/account">帳戶資訊</a></li>
@@ -175,13 +175,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="/static/img/about-b1.jpg">
+          <img class="d-block w-100" th:src="${prefix}+'/static/img/about-b1.jpg'">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/static/img/about-b2.jpg">
+          <img class="d-block w-100" th:src="${prefix}+'/static/img/about-b2.jpg'">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/static/img/about-b3.jpg">
+          <img class="d-block w-100" th:src="${prefix}+'/static/img/about-b3.jpg'">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
