--- a/src/main/resources/templates/book-cat.html
+++ b/src/main/resources/templates/book-cat.html
@@ -33,7 +33,7 @@
                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
               </svg>
-              <p sec:authentication="name"></p>
+              <p th:text="${username}"></p>
             </a>
             <ul class="list-group hide">
               <li class="list-group-item "><a href="/account">帳戶資訊</a></li>
@@ -181,7 +181,7 @@
       <!--      </div>-->
       <div th:each="book:${books}" class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="card">
-          <img class="card-img-top" th:src="${book.imageUrl}" th:alt="${book.name}">
+          <img class="card-img-top" th:src="${prefix}+${book.imageUrl}" th:alt="${book.name}">
           <div class="card-body">
             <p class="card-text"><span th:text="${book.name}"></span></p>
             <p><strong>NT <span th:text="${book.price}"></span></strong></p>
