--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -40,7 +40,7 @@
                 <path fill-rule="evenodd"
                   d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
               </svg>
-              <p sec:authentication="name"></p>
+              <p th:text="${user.userName}"></p>
             </a>
             <ul class="list-group hide">
               <li class="list-group-item "><a href="/account">帳戶資訊</a></li>
@@ -213,7 +213,7 @@
         <div th:if="${books}" class="cart-item-container">
           <div th:each="book, stat:${books}" class="cart-item cartitem-align cart-v" th:id="'cart-item-'+${book.id}">
             <div class="bcov-text">
-              <a th:href="'/book/insidepage/'+${book.slug}"><img th:src="${book.imageUrl}"></a>
+              <a th:href="'/book/insidepage/'+${book.slug}"><img th:src="${prefix} + ${book.imageUrl}"></a>
               <p th:text="${book.name}" class="bookname"></p>
             </div>
             <div class="price cart-align">
@@ -436,7 +436,7 @@
         <!-- 收藏清單第一本書明細 start -->
         <div class="cart-item item-align wish-v">
           <div class="bcov-text">
-            <a href="javascript:void(0);"><img src="/static/img/s_books/p03.jpg"></a>
+            <a href="javascript:void(0);"><img th:src="${prefix} + '/static/img/s_books/p03.jpg'"></a>
             <p class="bookname">Japan: cat culture</p>
           </div>
           <div class="price price-align">
@@ -463,7 +463,7 @@
         <!-- 收藏清單第二本書明細 start -->
         <div class="cart-item item-align wish-v ">
           <div class="bcov-text">
-            <a href="javascript:void(0);"><img src="/static/img/s_books/f08.jpg"></a>
+            <a href="javascript:void(0);"><img th:src="${prefix}+'/static/img/s_books/f08.jpg'"></a>
             <p class="bookname">Alfred Sisley</p>
           </div>
           <div class="price price-align">
@@ -505,7 +505,7 @@
   <div class="load-bgc hide">
     <div class="load-item ">
       <div class="load-pic">
-        <img src="/static/css/icon/colorbook-load.png" class="book-p">
+        <img th:src="${prefix}+'/static/css/icon/colorbook-load.png'" class="book-p">
       </div>
       <div class="load-txt">
         <small><i class="bi-hourglass-split"></i>&nbsp;Loading ...</small>
