--- a/src/main/resources/templates/insidepage.html
+++ b/src/main/resources/templates/insidepage.html
@@ -33,7 +33,7 @@
                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
               </svg>
-            <p sec:authentication="name"></p>
+            <p th:text="${username}"></p>
           </a>
           <ul class="list-group hide">
             <li class="list-group-item "><a href="/account">帳戶資訊</a></li>
@@ -152,13 +152,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" th:src="${book.imageUrl.replace('.jpg', '')}+_p1.jpg" alt="Paul Gauguin">
+              <img class="d-block w-100" th:src="${prefix} + ${book.imageUrl.replace('.jpg', '')}+_p1.jpg" alt="Paul Gauguin">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" th:src="${book.imageUrl.replace('.jpg', '')}+_p2.jpg">
+              <img class="d-block w-100" th:src="${prefix} + ${book.imageUrl.replace('.jpg', '')}+_p2.jpg">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" th:src="${book.imageUrl.replace('.jpg', '')}+_p3.jpg">
+              <img class="d-block w-100" th:src="${prefix} + ${book.imageUrl.replace('.jpg', '')}+_p3.jpg">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -268,7 +268,7 @@
     <div class="row ">
       <div class="col-12 col-sm-6 col-md-4">
         <div class="card">
-          <a href="/book/insidepage/ri-ben-nopanwu"><img class="card-img-top" src="/static/img/books/p17.jpg"></a>
+          <a href="/book/insidepage/ri-ben-nopanwu"><img class="card-img-top" th:src="${prefix}+'/static/img/books/p17.jpg'"></a>
           <div class="card-body card-sty">
             <p class="card-text">日本のパン屋</p>
             <p><strong>NT 800</strong></p>
@@ -277,7 +277,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-4">
         <div class="card">
-          <a href="/book/insidepage/architects-6-2021"><img class="card-img-top" src="/static/img/books/m13.jpg"></a>
+          <a href="/book/insidepage/architects-6-2021"><img class="card-img-top" th:src="${prefix}+'/static/img/books/m13.jpg'"></a>
           <div class="card-body card-sty">
             <p class="card-text">Architects #6/2021</p>
             <p><strong>NT 680</strong></p>
@@ -286,7 +286,7 @@
       </div>
       <div class="col-12  col-sm-6 col-md-4">
         <div class="card ">
-          <a href="/book/insidepage/interior-design-3"><img class="card-img-top" src="/static/img/books/m11.jpg"></a>
+          <a href="/book/insidepage/interior-design-3"><img class="card-img-top" th:src="${prefix}+'/static/img/books/m11.jpg'"></a>
           <div class="card-body card-sty">
             <p class="card-text">Interior design #3</p>
             <p><strong>NT 500</strong></p>
