修正前端書籍圖片問題與修正資料庫時區問題

--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -294,7 +294,7 @@
         <div th:each="detail:${details}" class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card">
             <a th:href="'/book/insidepage/'+${detail.book.slug}">
-              <img class="card-img-top" th:src="${detail.book.imageUrl}" alt="its owl right_bookcover">
+              <img class="card-img-top" th:src="${prefix} + ${detail.book.imageUrl}" alt="its owl right_bookcover">
             </a>
             <div class="card-body">
               <p class="card-text"><small th:text="${detail.book.name}"></small></p>
