--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -328,7 +328,7 @@
           內容的新報紙，總計收錄了200件海報，讀者們可一探究竟當時新藝術風的盛行。</p>
         <h6>NT 1190</h6>
         <div class="orderbook">
-          <a href="message.html">
+          <a href="/message">
             <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="訂購時間約3個月">
             預訂
           </button>
@@ -351,7 +351,7 @@
         <p class="p-txt">西斯萊( Sisley )受到巴比松畫派的影響，用色明亮，景物清晰。他喜歡用橘紅色來描繪陽光普照的景色，連雪景畫和洪水題材的畫作也充滿暖意，以色彩的交響融化了悲劇成分。</p>
         <h6>NT 1390</h6>
         <div class="orderbook">
-          <a href="message.html">
+          <a href="/message">
             <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="訂購時間約3個月">
             預訂
           </button>
