--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -70,7 +70,7 @@
               </svg>
             </a>
           </li>
-          <li><a href="message.html">
+          <li><a href="/message">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                 class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
                 <path
