--- a/src/main/resources/templates/insidepage.html
+++ b/src/main/resources/templates/insidepage.html
@@ -60,7 +60,7 @@
               </svg>
             </a>
           </li>
-          <li><a href="message.html">
+          <li><a href="/message">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
               <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
             </svg>
@@ -248,7 +248,7 @@
             <h5>&diams;退貨政策</h5>
             您可以在交貨後的7天內撤銷購買合同。我們很樂意向您發送退貨標籤，以免費退貨。我們將在收到商品後的最多14天內退還您購買金額，包括原始運費（標準運費）。
 
-            <h5>&diams;如果您還有其他關於訂單的問題，請與我們<a href="message.html">聯繫</a>。</h5>
+            <h5>&diams;如果您還有其他關於訂單的問題，請與我們<a href="/message">聯繫</a>。</h5>
           </div>
         </div>
       </div>
