--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -33,7 +33,7 @@
                 <path fill-rule="evenodd"
                   d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
               </svg>
-              <p sec:authentication="name"></p>
+              <p th:text="${user.userName}"></p>
             </a>
             <ul class="list-group hide">
               <li class="list-group-item "><a href="/account">帳戶資訊</a></li>
@@ -63,7 +63,7 @@
               </svg>
             </a>
           </li>
-          <li><a href="message.html">
+          <li><a href="/message">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                 class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
                 <path
